--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,8 @@ a:hover {
 .right-hero {
     height: 100%;
     width: 100%;
-    background-image: url('../assets/left.jpg');
+    background-image: url('../assets/right-v2.jpg');
+    background-size: cover;
     transition: width 1s;
     -webkit-transition: width 1s;
     /* Safari */
@@ -115,7 +116,8 @@ a:hover {
 .left-hero {
     height: 100%;
     width: 100%;
-    background-image: url('../assets/right.jpg');
+    background-image: url('../assets/left.jpg');
+    background-size: cover;
     transition:width 1s;
     -webkit-transition:width 1s;
     /* Safari */
