--- a/css/main.scss
+++ b/css/main.scss
@@ -62,6 +62,7 @@ body{
         background: linear-gradient(rgba(20, 20, 20, 1), rgba(255, 255, 255, 0));
         .nav-list {
             width: 100%;
+            padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -105,6 +106,8 @@ body{
                 font-size: .8em;
             }
 
+            
+
         }
         .cta-button:hover{
             background-color: var(--accent-primary);
@@ -130,17 +133,14 @@ body{
                 background-size: cover;
             }
 
+            span{
+                padding: 0 0 0 .7em;
+            }
+
             h1{
                 font-family: 'Source Code Pro';
             }
             
-
-            a{
-                color: var(--accent-primary);
-            }
-            a:hover{
-                color: var(--bg-light-primary);
-            }
         }
     
         .left-hero {
@@ -161,6 +161,10 @@ body{
     
             h1{
                 font-family: 'Open Sans';
+            }
+
+            span{
+                padding: 0 .7em 0 0;
             }
 
             &:hover{
