--- a/css/main.scss
+++ b/css/main.scss
@@ -39,6 +39,16 @@ body{
         font-weight: 300;
     }
 
+    .ux{
+        letter-spacing: .4em;
+        transition: all var(--transition-speed);
+    }
+    
+    .dev{
+        letter-spacing: .1em;
+        transition: all var(--transition-speed);
+    }
+
     ul {
         list-style-type: none;
     }
@@ -53,6 +63,14 @@ body{
             // color: rgba(231, 64, 223, 0.815);
             // color: #8556A6;
         }
+    }
+    .icon{
+        font-size: .8em;
+        transition: all var(--transition-speed);
+    }
+    .icon:hover{
+        color: var(--accent-primary);
+        font-size: 1.3em;
     }
 
     .nav-bar{
@@ -96,14 +114,18 @@ body{
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 4em;
-            height: .5em;
-            border: .12em solid var(--accent-primary);
+            width: 2.5em;
+            height: .2em;
+            border: .05em solid var(--accent-primary);
             background-color: transparent;
             border-radius: 34px;
             padding: .7em 1.7em;
             transition: var(--transition-speed);
             p{
+                font-size: .5em;
+            }
+
+            span{
                 font-size: .8em;
             }
 
@@ -114,6 +136,7 @@ body{
             background-color: var(--accent-primary);
             border-color: var(--bg-light-primary);
         }
+
         .right-hero {
             height: 100%;
             width: 100%;
@@ -132,6 +155,19 @@ body{
                 width: 180%;
                 background: linear-gradient(rgba(163, 149, 149, 0.2), rgba(224, 242, 87, 0.8)), url('../assets/right-v2.jpg');
                 background-size: cover;
+
+                .cta-button{
+                    color: var(--bg-light-primary);
+                    border:.05em solid var(--bg-light-primary);
+
+                    &:hover{
+                        border:.05em solid var(--accent-primary);
+                    }
+                }
+                .dev{
+                    letter-spacing: .2em;
+                }
+
             }
 
             span{
@@ -172,6 +208,18 @@ body{
                 width: 180%;
                 background: linear-gradient(rgba(163, 149, 149, 0.2), rgba(217, 96, 85, 0.815)), url('../assets/left.jpg');
                 background-size: cover;
+
+                .cta-button{
+                    color: var(--bg-light-primary);
+                    border:.05em solid var(--bg-light-primary);
+
+                    &:hover{
+                        border:.05em solid var(--accent-primary);
+                    }
+                }
+                .ux{
+                    letter-spacing: .6em;
+                }
             }
         }
     }
@@ -230,7 +278,8 @@ body{
             
         }
         .footer{
-            height: 76vh;
+            height: auto;
+            padding: 0;
         }
 
         .footer .section-body{
@@ -249,10 +298,6 @@ body{
         p{
             margin: 0;
             padding: 1.3em 0px;
-        }
-
-        .fa-heart{
-            color: red;
         }
     }
 
