--- a/css/main.scss
+++ b/css/main.scss
@@ -342,7 +342,7 @@ body{
 
 
 @media only screen and (max-width: 1024px) {
-    div.hero{
+    div.hero, div.info{
         display: none;
     }
     .main{
